HTML + CSS - CADASTRO

--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/login.css">
-    <title>Login</title>
+    <link rel="stylesheet" href="/static/cadastro.css">
+    <title>Cadastro</title>
 </head>
 <body>
-    <div class="main-login">
-        <div class="left-login">
-            <h1>Olá</h1>
-            <img src="/static/learning-animate.svg" class="left-login-img" alt="Estudante">
+    <div class = "main-cadastro">
+        <div class = "left-cadastro">
+            <h1>Cadastre-se agora!</h1>
         </div>
-        <div class="right-login">
-            <div class="card-login">
-                <h1>LOGIN</h1>
+        <div class = "right-cadastro">
+            <div class = "card-cadastro">
+                <h1>CADASTRO</h1>
                 <div class="textfield">
                     <label for="user">Usuário</label>
                     <input type="text" name="user" placeholder="Usuário" required>
@@ -23,8 +22,8 @@
                     <label for="password">Senha</label>
                     <input type="password" name="password" placeholder="Senha" required>
                 </div>
-                <button class="btn-login">Login</button>
-                <button class="btn-cadastrar" href="/cadastrar">Cadastrar</button>
+                <button class="btn-confirmar">Confirmar</button>
+            </div>
         </div>
     </div>
 </body>
