--- a/static/cadastro.css
+++ b/static/cadastro.css
@@ -92,23 +92,7 @@ body * {
     color: #f0ffff94
 }
 
-.btn-cadastro{
-    width: 100%;
-    padding: 16px 0px;
-    margin: 10px;
-    border: none;
-    border-radius: 8px;
-    outline: none;
-    text-transform: uppercase;
-    font-weight: 800;
-    letter-spacing: 3px;
-    color: #2b134b;
-    background: #00ffBB;
-    cursor: pointer;
-    box-shadow: 0px 10px 40px -12px #00000056;
-}
-
-.btn-cadastrar{
+.btn-confirmar{
     width: 100%;
     padding: 16px 0px;
     margin: 10px;
