--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -8,21 +8,29 @@
 </head>
 <body>
     <div class = "main-cadastro">
-        <div class = "left-cadastro">
-            <h1>Cadastre-se agora!</h1>
-        </div>
-        <div class = "right-cadastro">
+        <div class = "box-cadastro">
             <div class = "card-cadastro">
-                <h1>CADASTRO</h1>
+                <h1>CADASTRE-SE</h1>
                 <div class="textfield">
-                    <label for="user">Usuário</label>
+                    <label for="username">Usuário:</label>
                     <input type="text" name="user" placeholder="Usuário" required>
                 </div>
                 <div class="textfield">
-                    <label for="password">Senha</label>
+                    <label for="email">E-mail:</label>
+                    <input type="text" name="email" placeholder="Usuário" required>
+                </div>
+                <div class="textfield">
+                    <label for="matricula">Matrícula:</label>
+                    <input type="number" name="matricula" placeholder="Matrícula" required>
+                </div>
+                <div class="textfield">
+                    <label for="password">Senha:</label>
                     <input type="password" name="password" placeholder="Senha" required>
                 </div>
-                <button class="btn-confirmar">Confirmar</button>
+                <div class = "btns">
+                    <button class="btn-voltar">Voltar</button>
+                    <button class="btn-confirmar">Confirmar</button>
+                </div>
             </div>
         </div>
     </div>
