--- a/templates/login.html
+++ b/templates/login.html
@@ -16,15 +16,17 @@
             <div class="card-login">
                 <h1>LOGIN</h1>
                 <div class="textfield">
-                    <label for="user">Usuário</label>
+                    <label for="user">Matrícula</label>
                     <input type="text" name="user" placeholder="Usuário" required>
                 </div>
                 <div class="textfield">
                     <label for="password">Senha</label>
                     <input type="password" name="password" placeholder="Senha" required>
                 </div>
-                <button class="btn-login">Login</button>
-                <button class="btn-cadastrar" href="/cadastrar">Cadastrar</button>
+                <div class="btns">
+                    <button class="btn-login">Login</button>
+                    <button class="btn-cadastrar" href="/cadastrar">Cadastrar</button>
+                </div>
         </div>
     </div>
 </body>
