--- a/templates/cadastrar_lista.html
+++ b/templates/cadastrar_lista.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/dashboard.css">
-    <title>Dashboard</title>
+    <title>Document</title>
 </head>
 <body>
     
