--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -11,6 +11,7 @@
         <div class = "box-cadastro">
             <div class = "card-cadastro">
                 <h1>CADASTRE-SE</h1>
+                <form class="form-cadastro" id="form-cadastro" method = "GET">
                 <div class="textfield">
                     <label for="username">Usuário:</label>
                     <input type="text" name="user" placeholder="Usuário" required>
@@ -31,6 +32,7 @@
                     <button class="btn-voltar">Voltar</button>
                     <button class="btn-confirmar">Confirmar</button>
                 </div>
+                </form>
             </div>
         </div>
     </div>
