--- a/static/cadastro.css
+++ b/static/cadastro.css
@@ -44,6 +44,13 @@ body * {
     margin: 0;
 }
 
+.form-cadastro{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .textfield{
     display: flex;
     flex-direction: column;
@@ -82,8 +89,8 @@ body * {
 }
 
 .btn-confirmar{
-    flex: 1;
     width: 100%;
+    flex: 1;
     padding: 16px 0px;
     margin: 10px;
     border: none;
@@ -99,8 +106,8 @@ body * {
 }
 
 .btn-voltar{
-    flex: 1;
     width: 100%;
+    flex: 1;
     padding: 16px 0px;
     margin: 10px;
     border: none;
