--- a/templates/login.html
+++ b/templates/login.html
@@ -15,9 +15,10 @@
         <div class="right-login">
             <div class="card-login">
                 <h1>LOGIN</h1>
+                <form class="form-login" id="form-login" method="GET">
                 <div class="textfield">
-                    <label for="user">Matrícula</label>
-                    <input type="text" name="user" placeholder="Usuário" required>
+                    <label for="user">Usuário</label>
+                    <input type="text" name="username" placeholder="Usuário" required>
                 </div>
                 <div class="textfield">
                     <label for="password">Senha</label>
@@ -27,6 +28,7 @@
                     <button class="btn-login">Login</button>
                     <button class="btn-cadastrar" href="/cadastrar">Cadastrar</button>
                 </div>
+                </form>
         </div>
     </div>
 </body>
