--- a/templates/receber_lista.html
+++ b/templates/receber_lista.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Listas</title>
+    <link rel="stylesheet" href="/static/receber_lista.css">
 </head>
 <body>
-    
+    <div class = "main-lista">
+        <div class = "box-lista">
+            <div class = "card-lista">
+                <h2>Envie sua lista:</h2>
+                <form class="form-lista" id="form-lista" method = "POST" enctype="multipart/form-data">
+                <div class="anexo">
+                    <input type="file" name="arquivo_entregue" id="arquivo_entregue">
+                </div>
+                <div class = "btns">
+                    <button type = "reset" class="btn-cancelar">Cancelar</button>
+                    <button type = "submit" class="btn-enviar">Enviar</button>
+                </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
