--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
         <div class="right-login">
             <div class="card-login">
                 <h1>LOGIN</h1>
-                <form class="form-login" id="form-login" method="GET">
+                <form class="form-login" id="form-login" methods="POST">
                 <div class="textfield">
                     <label for="user">Usuário</label>
                     <input type="text" name="username" placeholder="Usuário" required>
