--- a/templates/receber_lista.html
+++ b/templates/receber_lista.html
@@ -11,6 +11,10 @@
         <div class = "box-lista">
             <div class = "card-lista">
                 <h2>Envie sua lista:</h2>
+                <div class="textfield">
+                    <label for="numero_lista">Número da lista:</label>
+                    <input type="number" name="numero_lista" placeholder="Número da Lista" required>
+                </div>
                 <form class="form-lista" id="form-lista" method = "POST" enctype="multipart/form-data">
                 <div class="anexo">
                     <input type="file" name="arquivo_entregue" id="arquivo_entregue">
