--- a/templates/cadastrar_lista.html
+++ b/templates/cadastrar_lista.html
@@ -3,10 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/cadastrar_lista.css">
-    <title>Listas</title>
+    <link rel="stylesheet" href="/static/cadastrar_tarefa.css">
+    <title>Cadastrar Listas</title>
 </head>
 <body>
-    
+    <div class = "main-cadastro">
+        <div class = "box-cadastro">
+            <div class = "card-cadastro">
+                <h2>Cadastrar Listas:</h2>
+                <form class="form-cadastro" id="form-cadastro" method = "POST">
+                <div class="textfield">
+                    <label for="numero_lista">Número da Lista:</label>
+                    <input type="number" name="numero_lista" placeholder="Número da Lista" required>
+                </div>
+                <div class="textfield">
+                    <label for="descricao">Descrição:</label>
+                    <input type="text" name="email" placeholder="Descrição" required>
+                </div>
+                <div class="textfield">
+                    <label for="data_entrega">Data de Entrega:</label>
+                    <input type="date" name="data_entrega" placeholder="Data de Entrega" required>
+                </div>
+                <div class = "btns">
+                    <button class="btn-voltar">Cancelar</button>
+                    <button class="btn-confirmar">Confirmar</button>
+                </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
