--- a/templates/receber_tarefa.html
+++ b/templates/receber_tarefa.html
@@ -11,6 +11,10 @@
         <div class = "box-tarefa">
             <div class = "card-tarefa">
                 <h2>Envie sua tarefa:</h2>
+                <div class="textfield">
+                    <label for="tarefa_id">Nome da tarefa:</label>
+                    <input type="text" name="tarefa_id" placeholder="Nome da Tarefa" required>
+                </div>
                 <form class="form-tarefa" id="form-tarefa" method = "POST" enctype="multipart/form-data">
                 <div class="anexo">
                     <input type="file" name="arquivo_entregue" id="arquivo_entregue">
