--- a/static/cadastrar_lista.css
+++ b/static/cadastrar_lista.css
@@ -73,6 +73,19 @@ body * {
     box-sizing: border-box;
 }
 
+.textfield > textarea{
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+    padding: 15px;
+    background: #514869;
+    color: #f0ffffde;
+    font-size: 12pt;
+    box-shadow: 0px 10px 40px #00000056;
+    outline: none;
+    box-sizing: border-box;
+}
+
 .textfield > label{
     color: #f0ffffde;
     margin-bottom: 10px;
