--- a/templates/cadastrar_lista.html
+++ b/templates/cadastrar_lista.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="textfield">
                     <label for="descricao">Descrição:</label>
-                    <input type="text" name="email" placeholder="Descrição" required>
+                    <textarea name = "descricao" cols = "40" rows = "5" placeholder="Descrição" required></textarea>
                 </div>
                 <div class="textfield">
                     <label for="data_entrega">Data de Entrega:</label>
