Falta tela de Ver Notas

--- a/templates/cadastrar_tarefa.html
+++ b/templates/cadastrar_tarefa.html
@@ -25,8 +25,8 @@
                     <input type="date" name="data_entrega" placeholder="Data de Entrega" required>
                 </div>
                 <div class = "btns">
-                    <button class="btn-voltar">Cancelar</button>
-                    <button class="btn-confirmar">Confirmar</button>
+                    <button type = "resets" class="btn-voltar">Cancelar</button>
+                    <button type = "submit" class="btn-confirmar">Confirmar</button>
                 </div>
                 </form>
             </div>
