--- a/static/lancar_notas.css
+++ b/static/lancar_notas.css
@@ -5,12 +5,13 @@ body{
     font-family: 'Noto-Sans', sans-serif;
 }
 
-
 .main-cadastro{
     width: 100vw;
     height: 100vh;
+    margin: 0;
     background: #201b2c;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -19,12 +20,34 @@ body{
     width: 50vw;
     height: 100vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+    margin: 20px;
 }
 
-.card-cadastro{
-    width: 80%;
+.div-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+}
+
+.form-cadastro{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+}
+
+.card-container{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.card1-cadastro{
+    width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,19 +56,25 @@ body{
     background: #2f2841;
     border-radius: 20px;
     box-shadow: 0px 10px 40px #00000056;
+    margin-right: 20px;
 }
 
-.card-cadastro > h2{
+.card1-cadastro>h2{
     color: #00ffBB;
     font-weight: 800;
     margin: 0;
 }
 
-.form-cadastro{
-    width: 100%;
+.card2-cadastro{
+    width: 50%;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
+    flex-direction: column;
+    padding: 30px 35px;
+    background: #2f2841;
+    border-radius: 20px;
+    box-shadow: 0px 10px 40px #00000056;
 }
 
 .textfield{
@@ -82,7 +111,8 @@ body{
 .btns{
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
 }
 
 .btn-confirmar{
