--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -16,7 +16,7 @@
                 <form class="form-cadastro" id="form-cadastro" method="POST">
                     <div class="textfield">
                         <label for="username">Usuário:</label>
-                        <input type="text" name="user" placeholder="Usuário" required>
+                        <input type="text" name="username" placeholder="Usuário" required>
                     </div>
                     <div class="textfield">
                         <label for="email">E-mail:</label>
@@ -24,7 +24,7 @@
                     </div>
                     <div class="textfield">
                         <label for="matricula">Matrícula:</label>
-                        <input type="number" name="matricula" placeholder="Matrícula" required>
+                        <input type="text" name="matricula" placeholder="Matrícula" required>
                     </div>
                     <div class="textfield">
                         <label for="password">Senha:</label>
