correcting new problems

--- a/templates/login.html
+++ b/templates/login.html
@@ -17,14 +17,14 @@
         <div class="right-login">
             <div class="card-login">
                 <h1>LOGIN</h1>
-                <form class="form-login" id="form-login" methods="POST">
+                <form class="form-login" id="form-login" method="POST">
                     <div class="textfield">
                         <label for="username">Usuário</label>
-                        <input type="text" username="username" placeholder="Usuário" required>
+                        <input type="text" name="username" placeholder="Usuário" required>
                     </div>
                     <div class="textfield">
                         <label for="password">Senha</label>
-                        <input type="password" password="password" placeholder="Senha" required>
+                        <input type="password" name="password" placeholder="Senha" required>
                     </div>
                     <div class="btns">
                         <button class="btn-login">Login</button>
